<?xml version="1.0"?>
<package format="3">
  <name>moveit_benchmark_resources</name>
  <version>1.0.0</version>
  <description>Databases and bag files for MoveIt 2 benchmarking and tutorials</description>

  <author email="sebastian.jahr@picknik.ai">Sebastian Jahr</author>
  <author email="cihataltiparmak1@gmail.com">Cihat Altıparmak</author>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
